<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical" >

  <include layout="@layout/header"/>

  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
      android:layout_marginLeft="10dp"
      android:orientation="vertical" >

    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/userName"
      android:textColor="@color/headerTextColor2"
      android:textStyle="bold" />

    <EditText
      android:id="@+id/userName"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/headerTextColor1"
      android:editable="true"
      android:hint="@string/userName" />

    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/password"
      android:textColor="@color/headerTextColor2"
      android:textStyle="bold" />

    <EditText
      android:id="@+id/password"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/headerTextColor1"
      android:editable="true"
      android:hint="@string/password"
      android:password="true" />

    <Button
      android:id="@+id/loginButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login" />

    <EditText
      android:id="@+id/message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/red"
      android:editable="false"
      android:textColor="@color/headerTextColor2"/>
  </LinearLayout>

</LinearLayout>