<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical" >

  <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/header" >

    <TextView
      android:id="@+id/headerText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignTop="@+id/headerImage"
      android:text="@string/wandelpoolHeader1"
      android:textSize="22sp"
      android:typeface="sans" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/headerText1"
      android:text="@string/wandelpoolHeader2"
      android:textSize="12sp"
      android:typeface="sans" />

    <ImageView
      android:id="@+id/headerImage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:src="@drawable/ic_launcher_background" />
  </RelativeLayout>

  <TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginPanel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/header"
    android:padding="3dip"
    android:shrinkColumns="0"
    android:stretchColumns="0" >

    <TableRow
      android:id="@+id/loginPanel"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:gravity="center_horizontal" >

      <TextView
        android:id="@+id/loginText"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/nietIngelogd"
        android:textColor="@color/white" />

      <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/login" />
    </TableRow>
  </TableLayout>

  <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rowheader" >

    <TextView
      android:id="@+id/datum"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginRight="6dip"
      android:textColor="@color/white"
      android:textStyle="bold" />

    <ImageView
      android:id="@+id/categorie"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/datum"
      android:layout_alignParentRight="true"
      android:layout_alignTop="@+id/datum"
      android:layout_marginLeft="6dip" />

    <TextView
      android:id="@+id/afstand"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/datum"
      android:layout_alignTop="@+id/datum"
      android:layout_toLeftOf="@id/categorie"
      android:textColor="@color/white"
      android:textStyle="bold" />

    <TextView
      android:id="@+id/totdatum"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/datum"
      android:textColor="@color/white"
      android:textStyle="bold" />

    <TextView
      android:id="@+id/titel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/totdatum"
      android:textColor="@color/textColor" />

    <TextView
      android:id="@+id/traject"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/titel"
      android:textColor="@color/textColor" />

    <TextView
      android:id="@+id/organisator"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_below="@id/traject"
      android:textColor="@color/white"
      android:textStyle="bold" />
  </RelativeLayout>

  <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/content" >

    <RelativeLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/subtitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/introductieLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitel"
        android:text="Introductie"
        android:textColor="@color/white"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/introductie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/introductieLabel"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <TextView
        android:id="@+id/omschrijvingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/introductie"
        android:text="Omschrijving"
        android:textColor="@color/white"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/omschrijving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/omschrijvingLabel"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <TextView
        android:id="@+id/verzamelpuntLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/omschrijving"
        android:text="Verzamelen"
        android:textColor="@color/white"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/verzamelpunt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verzamelpuntLabel"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <TextView
        android:id="@+id/verzameltijd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verzamelpunt"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <TextView
        android:id="@+id/heenreisLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verzameltijd"
        android:text="Heenreis"
        android:textColor="@color/white"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/heenreis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heenreisLabel"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <TextView
        android:id="@+id/terugreisLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heenreis"
        android:text="Terugreis"
        android:textColor="@color/white"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/terugreis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/terugreisLabel"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <TextView
        android:id="@+id/deelnemersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/terugreis"
        android:text="Deelnemers"
        android:textColor="@color/white"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/deelnemers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deelnemersLabel"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <TextView
        android:id="@+id/opgevenbij1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deelnemers"
        android:text="Opgeven bij"
        android:textColor="@color/white"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/opgevenbij1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/opgevenbij1Label"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <ImageView
        android:id="@+id/email1_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/opgevenbij1"
        android:layout_marginLeft="8dp"
        android:src="@android:drawable/sym_action_email" />

      <TextView
        android:id="@+id/email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/email1_action"
        android:layout_alignTop="@id/email1_action"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <ImageView
        android:id="@+id/telefoonnummer1_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email1_action"
        android:layout_marginLeft="8dp"
        android:src="@android:drawable/sym_action_call" />
      
      <TextView
        android:id="@+id/telefoonnummer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/telefoonnummer1_action"
        android:layout_alignTop="@id/telefoonnummer1_action"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <TextView
        android:id="@+id/aanmeldbijzonderheden1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/telefoonnummer1_action"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <ImageView
        android:id="@+id/mobiel1_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aanmeldbijzonderheden1"
        android:layout_marginLeft="8dp"
        android:src="@android:drawable/sym_action_call" />
      
      <TextView
        android:id="@+id/mobiel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/mobiel1_action"
        android:layout_alignTop="@id/mobiel1_action"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <TextView
        android:id="@+id/opgevenbij2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobiel1_action"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/textColor" />

      <ImageView
        android:id="@+id/email2_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/opgevenbij2"
        android:layout_marginLeft="8dp"
        android:src="@android:drawable/sym_action_email" />

      <TextView
        android:id="@+id/email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/email2_action"
        android:layout_alignTop="@id/email2_action"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <ImageView
        android:id="@+id/telefoonnummer2_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email2_action"
        android:layout_marginLeft="8dp"
        android:src="@android:drawable/sym_action_call" />
      
      <TextView
        android:id="@+id/telefoonnummer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/telefoonnummer2_action"
        android:layout_alignTop="@id/telefoonnummer2_action"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <TextView
        android:id="@+id/aanmeldbijzonderheden2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/telefoonnummer2_action"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />

      <ImageView
        android:id="@+id/mobiel2_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aanmeldbijzonderheden2"
        android:layout_marginLeft="8dp"
        android:src="@android:drawable/sym_action_call" />
      
      <TextView
        android:id="@+id/mobiel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/mobiel2_action"
        android:layout_alignTop="@id/mobiel2_action"
        android:layout_marginLeft="8dp"
        android:textColor="@color/textColor" />
    </RelativeLayout>
  </ScrollView>

</LinearLayout>